syntax = "proto3";
package sonrio.sonr.object;
import "object/object.proto";
option go_package = "github.com/sonr-io/blockchain/x/object/types";

message WhatIs {
  // DID is the DID of the object
  string did = 1;

  // Object_doc is the object document
  ObjectDoc object_doc = 2;

  // Creator is the DID of the creator
  string creator = 3;

  // Timestamp is the time of the last update of the DID Document
  int64 timestamp = 4;

  // IsActive is the status of the DID Document
  bool is_active = 5;
}

